--- a/HubSpot.NET/HubSpot.NET.csproj
+++ b/HubSpot.NET/HubSpot.NET.csproj
@@ -1,103 +1,36 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2D45B6F1-77AE-427E-846B-75BB380BE93B}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HubSpot.NET</RootNamespace>
-    <AssemblyName>HubSpot.NET</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
+    <TargetFramework>net46</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>0.1.0</Version>
+    <Authors>Squared Up Ltd.</Authors>
+    <Company>Squared Up Ltd.</Company>
+    <Description>C# .NET Wrapper around the common HubSpot APIs.</Description>
+    <Copyright>2018 Squared Up Ltd.</Copyright>
+    <PackageLicenseUrl>https://github.com/squaredup/HubSpot.NET/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/squaredup/HubSpot.NET</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/squaredup/HubSpot.NET</RepositoryUrl>
+    <PackageTags>hubspot api wrapper c# contact company deal engagement</PackageTags>
+    <PackageReleaseNotes>Initial release</PackageReleaseNotes>
+    <PackageId>SquaredUp.HubSpot.NET</PackageId>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <LangVersion>7.1</LangVersion>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <LangVersion>7.1</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Flurl, Version=2.6.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Flurl.2.6.0\lib\net45\Flurl.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="RestSharp, Version=106.2.1.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
-      <HintPath>..\packages\RestSharp.106.2.1\lib\net452\RestSharp.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.ValueTuple.4.4.0\lib\net461\System.ValueTuple.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Web" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
+    <PackageReference Include="Flurl" Version="2.6.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="RestSharp" Version="106.2.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
+  <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Api\Company\CompanyListRequestOptions.cs" />
-    <Compile Include="Api\Company\Dto\CompanyHubSpotModel.cs" />
-    <Compile Include="Api\Company\Dto\CompanySearchResultModel.cs" />
-    <Compile Include="Api\Company\HubSpotCompanyApi.cs" />
-    <Compile Include="Api\Contact\ContactListRequestOptions.cs" />
-    <Compile Include="Api\Contact\Dto\ContactHubSpotModel.cs" />
-    <Compile Include="Api\Contact\Dto\ContactListHubSpotModel.cs" />
-    <Compile Include="Api\Contact\HubSpotContactApi.cs" />
-    <Compile Include="Api\Deal\Dto\DealHubSpotModel.cs" />
-    <Compile Include="Api\Deal\HubSpotDealApi.cs" />
-    <Compile Include="Api\Engagement\Dto\EngagementHubSpotModel.cs" />
-    <Compile Include="Api\Engagement\Dto\EngagementListHubSpotModel.cs" />
-    <Compile Include="Api\Engagement\EngagementListRequestOptions.cs" />
-    <Compile Include="Api\Engagement\HubSpotEngagementApi.cs" />
-    <Compile Include="Api\Files\Dto\FileHubSpotModel.cs" />
-    <Compile Include="Api\Files\Dto\FileListHubSpotModel.cs" />
-    <Compile Include="Api\Files\Dto\FolderHubSpotModel.cs" />
-    <Compile Include="Api\Files\HubSpotCosFileApi.cs" />
-    <Compile Include="Api\Owner\Dto\OwnerHubSpotModel.cs" />
-    <Compile Include="Api\Owner\Dto\OwnerListHubSpotModel.cs" />
-    <Compile Include="Api\Owner\HubSpotOwnerApi.cs" />
-    <Compile Include="Core\HubSpotApi.cs" />
-    <Compile Include="Core\HubSpotBaseClient.cs" />
-    <Compile Include="Core\HubSpotException.cs" />
-    <Compile Include="Core\Interfaces\IHubSpotApi.cs" />
-    <Compile Include="Core\Interfaces\IHubSpotClient.cs" />
-    <Compile Include="Core\Interfaces\IHubSpotCompanyApi.cs" />
-    <Compile Include="Core\Interfaces\IHubSpotContactApi.cs" />
-    <Compile Include="Core\Interfaces\IHubSpotCosFileApi.cs" />
-    <Compile Include="Core\Interfaces\IHubSpotDealApi.cs" />
-    <Compile Include="Core\Interfaces\IHubSpotEngagementApi.cs" />
-    <Compile Include="Core\Interfaces\IHubSpotModel.cs" />
-    <Compile Include="Core\Interfaces\IHubSpotOwnerApi.cs" />
-    <Compile Include="Core\ReflectionExtensions.cs" />
-    <Compile Include="Core\Requests\HubspotDataEntityProp.cs" />
-    <Compile Include="Core\Requests\JsonContent.cs" />
-    <Compile Include="Core\Requests\RequestDataConverter.cs" />
-    <Compile Include="Core\Requests\RequestSerializer.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
