--- a/HubSpot.NET/HubSpot.NET.csproj
+++ b/HubSpot.NET/HubSpot.NET.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>net46;net451</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>0.3.0</Version>
+    <Version>0.5.0</Version>
     <Authors>Squared Up Ltd.</Authors>
     <Company>Squared Up Ltd.</Company>
     <Description>C# .NET Wrapper around the common HubSpot APIs.</Description>
@@ -11,8 +11,8 @@
     <PackageLicenseUrl>https://github.com/squaredup/HubSpot.NET/blob/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/squaredup/HubSpot.NET</PackageProjectUrl>
     <RepositoryUrl>https://github.com/squaredup/HubSpot.NET</RepositoryUrl>
-    <PackageTags>hubspot api wrapper c# contact company deal engagement</PackageTags>
-    <PackageReleaseNotes>0.3</PackageReleaseNotes>
+    <PackageTags>hubspot api wrapper c# contact company deal engagement properties crm</PackageTags>
+    <PackageReleaseNotes>0.5</PackageReleaseNotes>
     <PackageId>SquaredUp.HubSpot.NET</PackageId>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
