--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,5 @@
 language: csharp
 solution: HubSpot.NET.sln
+install:
+  - nuget restore HubSpot.NET.sln
+  - xbuild /p:TargetFrameworkVersion=v4.5;Configuration=Release /tv:3.5
