--- a/HubSpot.NET.Examples/HubSpot.NET.Examples.csproj
+++ b/HubSpot.NET.Examples/HubSpot.NET.Examples.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Companies.cs" />
     <Compile Include="Deals.cs" />
     <Compile Include="Contacts.cs" />
+    <Compile Include="OAuth.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Timeline.cs" />
@@ -60,5 +61,6 @@
       <Name>HubSpot.NET</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
