--- a/HubSpot.NET/.nuspec
+++ b/HubSpot.NET/.nuspec
@@ -11,6 +11,8 @@
           <file src="bin\Debug\net46\HubSpot.NET.dll" target="lib\net46\HubSpot.NET.dll"/>
           <file src="bin\Debug\net46\HubSpot.NET.pdb" target="lib\net46\HubSpot.NET.pdb"/>
           <file src="bin\Debug\net451\HubSpot.NET.dll" target="lib\net451\HubSpot.NET.dll"/>
-          <file src="bin\Debug\net451\HubSpot.NET.pdb" target="lib\net451\HubSpot.NET.pdb"/>     
+          <file src="bin\Debug\net451\HubSpot.NET.pdb" target="lib\net451\HubSpot.NET.pdb"/>
+          <file src="bin\Debug\netstandard20\HubSpot.NET.dll" target="lib\netstandard20\HubSpot.NET.dll"/>
+          <file src="bin\Debug\netstandard20\HubSpot.NET.pdb" target="lib\netstandard20\HubSpot.NET.pdb"/>     
      </files>
 </package>
