--- a/HubSpot.NET/.nuspec
+++ b/HubSpot.NET/.nuspec
@@ -8,7 +8,7 @@
           <dependencies>
                <dependency id="RestSharp" version="106.3.1" />
                <dependency id="Newtonsoft.Json" version="11.0.2" />
-               <dependency id="Flurl" version="2.8.0">
+               <dependency id="Flurl" version="2.8.0" />
           </dependencies>
      </metadata>
 
