updated csproj file with new organizational meta data

--- a/HubSpot.NET/HubSpot.NET.csproj
+++ b/HubSpot.NET/HubSpot.NET.csproj
@@ -3,18 +3,17 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>0.5.1</Version>
-    <Authors>Squared Up Ltd.</Authors>
-    <Company>Squared Up Ltd.</Company>
-    <Description>C# .NET Wrapper around the common HubSpot APIs.</Description>
-    <Copyright>2018 Squared Up Ltd.</Copyright>
+    <Version>0.8.13</Version>
+    <Authors>HubSpot.NET</Authors>
+    <Company>HubSpot.NET</Company>
+    <Description>C# .NET client library targeting the HubSpot APIs.</Description>
+    <Copyright>HubSpot.NET</Copyright>
     <PackageLicenseUrl>https://github.com/squaredup/HubSpot.NET/blob/master/LICENSE</PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/squaredup/HubSpot.NET</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/squaredup/HubSpot.NET</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/hubspot-net/HubSpot.NET</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/hubspot-net/HubSpot.NET.git</RepositoryUrl>
     <PackageTags>hubspot api wrapper c# contact company deal engagement properties crm</PackageTags>
-    <PackageReleaseNotes>0.5.1</PackageReleaseNotes>
-    <PackageId>SquaredUp.HubSpot.NET</PackageId>
-    <SignAssembly>false</SignAssembly>
+    <PackageReleaseNotes>0.8.13</PackageReleaseNotes>
+    <PackageId>HubSpot.NET</PackageId>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <LangVersion>7.1</LangVersion>
