--- a/HubSpot.NET/.nuspec
+++ b/HubSpot.NET/.nuspec
@@ -2,11 +2,11 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
      <metadata>
           <id>HubSpot.NET</id>
-          <version>0.8.1.5</version>
-          <description>C# .NET Wrapper around the common HubSpot APIs</description>
-          <authors>David Clarke</authors>
+          <version>0.8.13</version>
+          <description>C# .NET client library targetting the HubSpot APIs</description>
+          <authors>David Clarke, Turner Bass</authors>
           <dependencies>
-               <dependency id="RestSharp" version="106.4.2" />
+               <dependency id="RestSharp" version="106.6.9" />
                <dependency id="Newtonsoft.Json" version="11.0.2" />
                <dependency id="Flurl" version="2.8.0" />
           </dependencies>
