Fixes #48 and #9. Deals can be associated with other deals, deprecated the Deals.ListAssociated method

--- a/HubSpot.NET.Tests/HubSpot.NET.Tests.csproj
+++ b/HubSpot.NET.Tests/HubSpot.NET.Tests.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\HubSpot.NET\HubSpot.NET.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Api\Deal\" />
+  </ItemGroup>
+
 </Project>
