reverted language version and updated build triggers

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,6 +4,12 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
 trigger:
+  branches:
+    include:
+    - master
+    - refs/tags/*
+  
+pr:
 - master
 
 pool:
