--- a/HubSpot.NET.Tests/HubSpot.NET.Tests.csproj
+++ b/HubSpot.NET.Tests/HubSpot.NET.Tests.csproj
@@ -18,5 +18,16 @@
         <PackageReference Include="NUnit3TestAdapter" Version="4.1.0"/>
         <PackageReference Include="FluentAssertions" Version="6.2.0"/>
     </ItemGroup>
+        <ItemGroup>
+        <PackageReference Include="coverlet.collector" Version="3.1.0">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="GitHubActionsTestLogger" Version="1.2.0" />
+        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
+        <PackageReference Include="Shouldly" Version="4.0.3" />
+
+    </ItemGroup>
 
 </Project>
