--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,5 +28,5 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         dotnet nuget add source --username jt-bruch --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/boomandbucket/index.json"
-        dotnet nuget push "./HubSpot.NET/bin/Release/HubSpot.NET.1.0.0.nupkg"  --api-key GITHUB_TOKEN --source "github"
+        dotnet nuget push "./HubSpot.NET/bin/Release/HubSpot.NETCORE.1.0.0.nupkg"  --api-key GITHUB_TOKEN --source "github"
 
