--- a/HubSpot.NET/HubSpot.NET.csproj
+++ b/HubSpot.NET/HubSpot.NET.csproj
@@ -10,7 +10,7 @@
     <PackageLicenseUrl>https://github.com/boomandbucket/HubSpot.NET/blob/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/boomandbucket/HubSpot.NET</PackageProjectUrl>
     <RepositoryUrl>https://github.com/boomandbucket/HubSpot.NET.git</RepositoryUrl>
-    <PackageTags>hubspot api wrapper c# contact company deal engagement properties crm</PackageTags>
+    <PackageTags>hubspot api wrapper c# contact company deal engagement properties crm custom objects</PackageTags>
     <PackageReleaseNotes>1.0.0</PackageReleaseNotes>
     <PackageId>HubSpot.NETCORE</PackageId>
   </PropertyGroup>
