--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,7 @@ jobs:
 
     - name: Update version files
       env:
-        GITHUB_RUN_ID: $${{env.GITHUB_RUN_NUMBER}}
+        GITHUB_RUN_NUMBER: $${{env.GITHUB_RUN_NUMBER}}
       run: |
         ls
 
@@ -36,8 +36,8 @@ jobs:
     - name: Publish the project
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        GITHUB_RUN_ID: $${{env.GITHUB_RUN_NUMBER}}
+        GITHUB_RUN_NUMBER: $${{env.GITHUB_RUN_NUMBER}}
       run: |
         dotnet nuget add source --username jt-bruch --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/boomandbucket/index.json"
-        dotnet nuget push "./HubSpot.NET/bin/Release/HubSpot.NETCORE.1.0.$GITHUB_RUN_ID.nupkg"  --api-key GITHUB_TOKEN --source "github"
+        dotnet nuget push "./HubSpot.NET/bin/Release/HubSpot.NETCORE.1.0.$GITHUB_RUN_NUMBER.nupkg"  --api-key GITHUB_TOKEN --source "github"
 
